// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Column快照测试 栅格布局 1`] = `
<div
  className="sc-bdVaJa vqFSF sinoui-row"
>
  <div
    className="sc-bwzfXH pfqjU sinoui-column"
  >
    列
  </div>
</div>
`;

exports[`布局Column快照测试 默认 1`] = `
<div
  className="sc-bdVaJa vqFSF sinoui-row"
>
  <div
    className="sc-bwzfXH kQhPHP sinoui-column"
  >
    列
  </div>
</div>
`;
